like dislike watchlist all actions completed

--- a/veganza/.vscode/settings.json
+++ b/veganza/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "addto",
+        "dislikeobj",
+        "favobj",
+        "likeobj",
+        "mobj",
+        "newobj",
         "Veganza"
     ]
 }
