open movie added and some bug fixes v-alpha-2.3.6

--- a/veganza/.vscode/settings.json
+++ b/veganza/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
         "addto",
+        "backposter",
         "dislikeobj",
         "favobj",
         "likeobj",
         "mobj",
         "newobj",
-        "Veganza"
+        "runtimes",
+        "Veganza",
+        "wikilink"
     ]
 }
