recommendation algorithm implimented v-alpha-3.0.1

--- a/veganza/.vscode/settings.json
+++ b/veganza/.vscode/settings.json
@@ -7,6 +7,7 @@
         "likeobj",
         "mobj",
         "newobj",
+        "recommendobj",
         "runtimes",
         "Veganza",
         "wikilink"
