Bug fixed v3.3-Beta-final

--- a/veganza/.vscode/settings.json
+++ b/veganza/.vscode/settings.json
@@ -4,6 +4,7 @@
         "backposter",
         "dislikeobj",
         "favobj",
+        "lastmovie",
         "likeobj",
         "mobj",
         "newobj",
